| Bug #10365 | Cluster handler uses non-standard error codes | ||
|---|---|---|---|
| Submitted: | 4 May 2005 18:04 | Modified: | 7 Jul 2005 13:39 |
| Reporter: | Hartmut Holzgraefe | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 4.1.11 | OS: | n/a |
| Assigned to: | Magnus Blaudd | Target Version: | |
[4 May 2005 18:04]
Hartmut Holzgraefe
[8 Jun 2005 11:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/25753
[27 Jun 2005 10:53]
Magnus Blaudd
Pushed to 4.1.13 and 5.0.9
[7 Jul 2005 13:39]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented in 4.1.13 and 5.0.9 change histories; closed.
