sql/sql_base.cc
@@ -1375,9 +1375,20 @@ static int open_unireg_entry(THD *thd, TABLE *entry, const char *db,
        trying to discover the table at the same time.
       */
       if (discover_retry_count++ != 0)
-       goto err;
-      if (ha_create_table_from_engine(thd, db, name, TRUE) != 0)
-       goto err;
+        goto err;
+      if (ha_table_exists_in_engine(thd, db, name) &&
+          ha_create_table_from_engine(thd, db, name))
+      {
+        /* Give right error message */
+        thd->clear_error();
+        DBUG_PRINT("error", ("Dicovery of %s/%s failed", db, name));
+        my_printf_error(ER_UNKNOWN_ERROR,
+                        "Failed to open '%-.64s', error while "
+                        "unpacking from engine",
+                        MYF(0), name);
+
+        goto err;
+      }
 
       thd->clear_error(); // Clear error message
       continue;
